--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -12,7 +12,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">Kevin Dudley is exploring how epigenetic modifications regulate genome activity across the tree of life</h1>
+    <h1 id="hometext" class="font-weight-bold">Kevin Dudley is exploring epigenetic mechanisms of genome regulation across the tree of life</h1>
   </div>
 </div>
 
